# rdw_research

./: README.md  main.py  pyproject.toml
configs/: classical_prior.yaml  motion_fusion.yaml
data/: accuracy_classical.csv  benchmark_classical.csv  gt_center_130.csv  gt_classical_x.csv
src/classical_prior/: classical_ops.py  cli.py  pipeline.py  roadnet_runtime.py  state.py
src/common/: io.py  metrics.py  video.py
src/eval/: eval_classical_x_accuracy.py
src/motion_fusion/: cli.py  filters.py  lanenet_runtime.py  odometry.py  pipeline.py
src/rdw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tools/: annotate_gt_x.py  generator.py
