[project]
name = "rdw"
version = "0.1.0"
description = "Self Driving Challenge perception algorithms"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.4",
    "onnxruntime>=1.23.2",
    "opencv-python-headless>=4.11.0.86",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[tool.setuptools.packages.find]
where = ["src"]
    "opencv-python>=4.11.0.86",
    "pyyaml>=6.0.3",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=9.0.0",
    "ruff>=0.14.4",
]

[project.scripts]
rdw-classical = "classical_prior.cli:app"
rdw-classical = "classical_prior.cli:cli_entry"


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]
